<resources>
    <string name="app_name">Android Apps Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="portfolio_title">Android Apps</string>
    <string name="btn_spotify_streamer">Spotify Streamer</string>
    <string name="btn_scores_app">Scores App</string>
    <string name="btn_library_app">Library App</string>
    <string name="btn_build_it_bigger">Build It Bigger</string>
    <string name="btn_xyz_reader">XYZ Reader</string>
    <string name="btn_capstone">Capstone: My Own App</string>
    <string name="toast_msg">This button will launch</string>
</resources>
