<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_purple"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portfolio_title"
        android:textSize="@dimen/text_title"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvPortfolioTitle"
        android:layout_margin="@dimen/margin_medium"/>
    <Button
        style="@style/UdaciousButton"
        android:text="@string/btn_spotify_streamer"
        android:id="@+id/btnSpotifyStreamer"
        android:layout_below="@id/tvPortfolioTitle"/>
    <Button
        style="@style/UdaciousButton"
        android:text="@string/btn_scores_app"
        android:id="@+id/btnScoresApp"
        android:layout_below="@id/btnSpotifyStreamer"/>
    <Button
        style="@style/UdaciousButton"
        android:text="@string/btn_library_app"
        android:id="@+id/btnLibraryApp"
        android:layout_below="@id/btnScoresApp"/>
    <Button
        style="@style/UdaciousButton"
        android:text="@string/btn_build_it_bigger"
        android:id="@+id/btnBuildItBigger"
        android:layout_below="@id/btnLibraryApp"/>
    <Button
        style="@style/UdaciousButton"
        android:text="@string/btn_xyz_reader"
        android:id="@+id/btnXYZReader"
        android:layout_below="@id/btnBuildItBigger"/>
    <Button
        style="@style/UdaciousButton"
        android:text="@string/btn_capstone"
        android:id="@+id/btnCapstone"
        android:layout_below="@id/btnXYZReader"
        android:textColor="@android:color/white"/>
</RelativeLayout>
